# cainam.github.io

./: generate_inventory.py  longhorn-inspection-pod.yaml
.github/workflows/: generate-inventory.yaml  jekyll-gh-pages.yml
_data/: site_inventory.yml
charts/istiod-config/: old_authorization_policy.aml
compile-bazel-with-gentoo-musl-on-aarch64/: envoy-in-container.txt
compile-bazel-with-gentoo-musl-on-aarch64.old/bazel/: add-pt1.txt
compile-bazel-with-gentoo-musl-on-aarch64/bazel/: WORKSPACE  add-pt1.txt  add-pt2.txt  add2BUILD.txt  error_desc.txt  main.cc  sync_command.sh
compile-bazel-with-gentoo-musl-on-aarch64/bazel.old/: WORKSPACE  main.cc
compile-bazel-with-gentoo-musl-on-aarch64/bazel.old/envoy_foreign_cc/bazel/foreign_cc/: BUILD
compile-bazel-with-gentoo-musl-on-aarch64/bazel/fake_python3_12_host/: BUILD.bazel  WORKSPACE  wrapper.py
compile-bazel-with-gentoo-musl-on-aarch64/bazel/tools/foreign_cc/foreign_cc/: BUILD.bazel  cmake.bzl  configure.bzl  defs.bzl  make.bzl  repositories.bzl
compile-bazel-with-gentoo-musl-on-aarch64/bazel/tools/jdk/: BUILD.bazel  WORKSPACE
compile-bazel-with-gentoo-musl-on-aarch64/bazel/tools/python/: BUILD.bazel
docs/: Readme.md  compiling_envoy_proxy_on_musl_aarch64.md  oauth2-sequence-with-curl.md
docs/_data/: pages.txt
docs/_includes/: global_nav.html  head-custom.html  head.html
docs/_layouts/: default.html
graveyard/: post_gateway.yml  post_installation.yml  post_virtualservice.yml
