load("@bazel_tools//tools/jdk:default_java_toolchain.bzl", "default_java_toolchain")

java_runtime(
    name = "local_jdk_runtime",
    java_home = "/root/zulu21.44.17-ca-jdk21.0.8-linux_musl_aarch64", #/opt/liberica-jdk-17",  # or your custom musl JDK path
    visibility = ["//visibility:public"],
)

default_java_toolchain(
    name = "liberica_java_toolchain_impl",
    java_runtime = ":local_jdk_runtime",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "liberica_toolchain",
    toolchain = ":liberica_java_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/jdk:toolchain_type",
    visibility = ["//visibility:public"],
)
