java_runtime(
    name = "local_jdk_runtime",
    java_home = "/opt/zulu",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "bootstrap_runtime_toolchain_definition",
    toolchain = ":local_jdk_runtime",
    toolchain_type = "@bazel_tools//tools/jdk:bootstrap_runtime_toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "runtime_toolchain_definition",
    toolchain = ":local_jdk_runtime",
    toolchain_type = "@bazel_tools//tools/jdk:runtime_toolchain_type",
    visibility = ["//visibility:public"],
)

