# Content to be copied to @@envoy//bazel/foreign_cc/BUILD

# 1. Load the cc_library function from your external stub repository
#    (@@envoy_foreign_cc is the name of your local_repository defined in WORKSPACE)
load("@envoy_foreign_cc//foreign_cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

# --- liburing ---
cc_library(
    name = "liburing",
    linkopts = ["/usr/local/lib/liburing.a"],
    isibility = ["//visibility:public"],
)

alias(
    name = "liburing_linux",
    actual = ":liburing",
    visibility = ["//visibility:public"],
)

# --- libevent / event ---
# Envoy's internal BUILD files often reference 'event' directly.
cc_library(
    name = "event",
    linkopts = ["/usr/local/lib/libevent.a"],
    isibility = ["//visibility:public"],
)
alias(
    name = "event_linux",
    actual = ":event",
    visibility = ["//visibility:public"],
)

# --- boringssl ---
cc_library(
    name = "boringssl",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "boringssl_linux",
    srcs = [],
    hdrs = [],
    deps = [":boringssl"],
)

# --- protobuf ---
cc_library(
    name = "protobuf",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "protobuf_linux",
    srcs = [],
    hdrs = [],
    deps = [":protobuf"],
)

cc_library(
    name = "zlib",
    linkopts = ["/usr/lib/libz.a"],
    visibility = ["//visibility:public"],
)
alias(
    name = "zlib_linux",
    actual = ":libz",
    visibility = ["//visibility:public"],
)

# --- zlib ---
#cc_library(
#    name = "zlib",
#    srcs = [],
#    hdrs = [],
#    deps = [],
#)
#
#cc_library(
#    name = "zlib_linux",
#    srcs = [],
#    hdrs = [],
#    deps = [":zlib"],
#)

# --- c-ares / ares ---
# Envoy typically uses the name 'ares' for the c-ares target.
cc_library(
    name = "ares",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "ares_linux",
    srcs = [],
    hdrs = [],
    deps = [":ares"],
)

# --- re2 ---
cc_library(
    name = "re2",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "re2_linux",
    srcs = [],
    hdrs = [],
    deps = [":re2"],
)

# --- gflags ---
cc_library(
    name = "gflags",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "gflags_linux",
    srcs = [],
    hdrs = [],
    deps = [":gflags"],
)

# --- abseil ---
cc_library(
    name = "abseil",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "abseil_linux",
    srcs = [],
    hdrs = [],
    deps = [":abseil"],
)

# --- libprotobuf-mutator ---
cc_library(
    name = "libprotobuf_mutator",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "libprotobuf_mutator_linux",
    srcs = [],
    hdrs = [],
    deps = [":libprotobuf_mutator"],
)

# --- jemalloc ---
cc_library(
    name = "jemalloc",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "jemalloc_linux",
    srcs = [],
    hdrs = [],
    deps = [":jemalloc"],
)

# --- nghttp2 / nghttp ---
cc_library(
    name = "nghttp2",
    linkopts = ["/usr/lib/libnghttp2.a"],
    isibility = ["//visibility:public"],
)
alias(
    name = "nghttp2_linux",
    actual = ":nghttp2",
    visibility = ["//visibility:public"],
)   

cc_library(
    name = "luajit",
    srcs = [],
    hdrs = [],
    includes = ["/usr/local/include/luajit-2.1"],
    copts = ["-isystem", "/usr/local/include/luajit-2.1"],
    deps = [],
)

cc_library(
    name = "luajit_linux",
    srcs = [],
    hdrs = [],
    deps = [":luajit"],
)

# ... Inside your stub BUILD file ...

# --- zstd ---
cc_library(
    name = "zstd",
    srcs = [],
    hdrs = [],
    deps = [],
    linkopts = ["-lzstd"]
)

cc_library(
    name = "zstd_linux",
    srcs = [],
    hdrs = [],
    deps = [":zstd"],
    linkopts = ["-lzstd"]
)

# --- libsxg (Signed Exchanges) ---
cc_library(
    name = "libsxg",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "libsxg_linux",
    srcs = [],
    hdrs = [],
    deps = [":libsxg"],
)

# --- maxmind (GeoIP Lookups) ---
cc_library(
    name = "maxmind",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "maxmind_linux",
    srcs = [],
    hdrs = [],
    deps = [":maxmind"],
)

# --- wamr (WebAssembly Micro Runtime) ---
# Required for Wasm extensions.
cc_library(
    name = "wamr",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "wamr_linux",
    srcs = [],
    hdrs = [],
    deps = [":wamr"],
)

# --- librdkafka (If enabled, e.g., via --define kafka=enabled) ---
cc_library(
    name = "librdkafka",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "librdkafka_linux",
    srcs = [],
    hdrs = [],
    deps = [":librdkafka"],
)

# --- gperftools / tcmalloc (Often used via foreign_cc in older versions) ---
cc_library(
    name = "gperftools",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "gperftools_build",
    srcs = [],
    hdrs = [],
    deps = [],
)

cc_library(
    name = "gperftools_build_linux",
    srcs = [],
    hdrs = [],
    deps = [":gperftools_build"],
)
